# GestureRecognition_Kinect-ROS

./: setup
body_msgs/.svn/: all-wcprops  entries
body_msgs/msg/.svn/: entries
body_msgs/msg_gen/lisp/: Hand.lisp  Hands.lisp  Skeleton.lisp  SkeletonJoint.lisp  Skeletons.lisp  _package.lisp  _package_Hand.lisp  _package_Hands.lisp  _package_Skeleton.lisp  _package_SkeletonJoint.lisp  _package_Skeletons.lisp  body_msgs-msg.asd
body_msgs/src/body_msgs/msg/: _Hand.py  _Hands.py  _Skeleton.py  _SkeletonJoint.py  _Skeletons.py  __init__.py
gesture/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  gesture.txt  mainpage.dox  manifest.xml
gesture/launch/: handposition.launch
gesture/msg/: HandPos.msg  gesture.msg
gesture/msg_gen/cpp/include/gesture/: HandPos.h  gesture.h
gesture/msg_gen/lisp/: HandPos.lisp  _package.lisp  _package_HandPos.lisp  _package_gesture.lisp  gesture-msg.asd  gesture.lisp
gesture/src/: gesture_trainer.cpp  hand_position.cpp  recsub.cpp  recsub1.cpp  start.sh  trainannv.cpp  trainsub.cpp  trainsub1.cpp
gesture/src/gesture/msg/: _HandPos.py  __init__.py  _gesture.py
grec/: .cproject  .project  .pydevproject  CMakeLists.txt  NOTE  cmake_install.cmake  mainpage.dox  manifest.xml
grec/src/: gentraindata.cpp  gentrainvecs.cpp  gentrainxyz.cpp  gentrainxyz1.cpp  pointstf.cpp  recognize3.cpp  recogvecs.cpp  recogxyz.cpp  tfclient0.cpp  trainann.cpp  trainannv.cpp  trainsub.cpp
skeletal_tracker/.svn/: entries
skeletal_tracker/include/.svn/: entries
skeletal_tracker/src/: main.cpp
skeletal_tracker/src/.svn/: entries
(+5 files in other folders)
